--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="/style/all.css">
-  <script src="/js/all.js"></script>
+  <link rel="stylesheet" href="/Kaohsiung-travel/style/all.css">
+  <script src="/Kaohsiung-travel/js/all.js"></script>
 </head>
 <body>
 
